@@ -1,36 +1,29 @@
 /**
- * Copyright (C) 2010-2013 Axel Morgner, structr <structr@structr.org>
+ * Copyright (C) 2010-2014 Structr, c/o Morgner UG (haftungsbeschränkt) <structr@structr.org>
  *
- * This file is part of structr <http://structr.org>.
+ * This file is part of Structr <http://structr.org>.
  *
- * structr is free software: you can redistribute it and/or modify
+ * Structr is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
  * published by the Free Software Foundation, either version 3 of the
  * License, or (at your option) any later version.
  *
- * structr is distributed in the hope that it will be useful,
+ * Structr is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU Affero General Public License
- * along with structr.  If not, see <http://www.gnu.org/licenses/>.
+ * along with Structr.  If not, see <http://www.gnu.org/licenses/>.
  */
-
-
 package org.structr.core.auth;
 
-import java.util.LinkedList;
-import java.util.List;
 import org.structr.common.SecurityContext;
 import org.structr.common.error.FrameworkException;
-import org.structr.core.Services;
 
 //import org.structr.context.SessionMonitor;
 import org.structr.core.auth.exception.AuthenticationException;
 import org.structr.core.entity.Principal;
-import org.structr.core.graph.search.Search;
-import org.structr.core.graph.search.SearchNodeCommand;
 
 //~--- JDK imports ------------------------------------------------------------
 
@@ -40,9 +33,9 @@ import java.util.logging.Logger;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
-import org.structr.core.Result;
+import org.structr.core.app.App;
+import org.structr.core.app.StructrApp;
 import org.structr.core.entity.AbstractNode;
-import org.structr.core.graph.search.SearchAttribute;
 
 //~--- classes ----------------------------------------------------------------
 
@@ -121,21 +114,10 @@ public class StructrAuthenticator implements Authenticator {
 	@Override
 	public Principal getUser(HttpServletRequest request, final boolean tryLogin) throws FrameworkException {
 
-		String userName  = (String) request.getSession().getAttribute(USERNAME_KEY);
+		final String userName = (String) request.getSession().getAttribute(USERNAME_KEY);
+		final App app         = StructrApp.getInstance();
 		
-		List<SearchAttribute> attrs = new LinkedList<SearchAttribute>();
-		attrs.add(Search.andExactTypeAndSubtypes(Principal.class));
-		attrs.add(Search.andExactName(userName));
-		
-		Result userList = Services.command(SecurityContext.getSuperUserInstance(), SearchNodeCommand.class).execute(attrs);
-		Principal user  = null;
-		
-		if (!userList.isEmpty()) {
-			user = (Principal) userList.get(0);
-		}
-
-		return user;
-
+		return app.nodeQuery(Principal.class).andName(userName).getFirst();
 	}
 
 	@Override
