@@ -1,23 +1,21 @@
 /**
- * Copyright (C) 2010-2013 Axel Morgner, structr <structr@structr.org>
+ * Copyright (C) 2010-2014 Structr, c/o Morgner UG (haftungsbeschränkt) <structr@structr.org>
  *
- * This file is part of structr <http://structr.org>.
+ * This file is part of Structr <http://structr.org>.
  *
- * structr is free software: you can redistribute it and/or modify
+ * Structr is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
  * published by the Free Software Foundation, either version 3 of the
  * License, or (at your option) any later version.
  *
- * structr is distributed in the hope that it will be useful,
+ * Structr is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU Affero General Public License
- * along with structr.  If not, see <http://www.gnu.org/licenses/>.
+ * along with Structr.  If not, see <http://www.gnu.org/licenses/>.
  */
-
-
 package org.structr.web.common;
 
 import net.sf.jmimemagic.Magic;
@@ -33,7 +31,6 @@ import org.structr.core.entity.AbstractNode;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.LinkedList;
 import java.util.List;
 
 import java.util.UUID;
@@ -41,19 +38,16 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang.StringUtils;
-import org.structr.common.Path;
 import org.structr.common.PathHelper;
 import org.structr.common.SecurityContext;
-import org.structr.core.Result;
+import org.structr.core.GraphObject;
+import org.structr.core.app.App;
+import org.structr.core.app.StructrApp;
+import org.structr.core.entity.LinkedTreeNode;
 import org.structr.core.graph.CreateNodeCommand;
-import org.structr.core.graph.StructrTransaction;
-import org.structr.core.graph.TransactionCommand;
-import org.structr.core.graph.search.Search;
-import org.structr.core.graph.search.SearchAttribute;
 import org.structr.core.property.PropertyMap;
 import org.structr.util.Base64;
 import org.structr.web.entity.AbstractFile;
-import static org.structr.web.servlet.HtmlServlet.searchNodesAsSuperuser;
 
 //~--- classes ----------------------------------------------------------------
 
@@ -132,8 +126,8 @@ public class FileHelper {
 	public static org.structr.web.entity.File createFile(final SecurityContext securityContext, final byte[] fileData, final String contentType, final Class<? extends org.structr.web.entity.File> fileType)
 		throws FrameworkException, IOException {
 
-		CreateNodeCommand<org.structr.web.entity.File> createNodeCommand = Services.command(securityContext, CreateNodeCommand.class);
-		PropertyMap props                          = new PropertyMap();
+		CreateNodeCommand<org.structr.web.entity.File> createNodeCommand = StructrApp.getInstance(securityContext).command(CreateNodeCommand.class);
+		PropertyMap props                                                = new PropertyMap();
 		
 		props.put(AbstractNode.type, fileType == null ? org.structr.web.entity.File.class.getSimpleName() : fileType.getSimpleName());
 
@@ -246,28 +240,32 @@ public class FileHelper {
 	 */
 	public static void writeToFile(final org.structr.web.entity.File fileNode, final byte[] data) throws FrameworkException, IOException {
 
-		String uuid = fileNode.getProperty(AbstractNode.uuid);
+		String uuid = fileNode.getProperty(GraphObject.id);
 		if (uuid == null) {
 
 			final String newUuid = UUID.randomUUID().toString().replaceAll("[\\-]+", "");
+			final App app        = StructrApp.getInstance(fileNode.getSecurityContext());
 			uuid                 = newUuid;
-			
-			Services.command(fileNode.getSecurityContext(), TransactionCommand.class).execute(new StructrTransaction() {
 
-				@Override
-				public Object execute() throws FrameworkException {
+			try {
 
-					fileNode.unlockReadOnlyPropertiesOnce();
-					fileNode.setProperty(AbstractNode.uuid, newUuid);
-					return null;
-				}
-			});
+				app.beginTx();
+				fileNode.unlockReadOnlyPropertiesOnce();
+				fileNode.setProperty(GraphObject.id, newUuid);
+				app.commitTx();
+				
+			} finally {
+				
+				app.finishTx();
+			}
 
 		}
 
 		fileNode.setRelativeFilePath(org.structr.web.entity.File.getDirectoryPath(uuid) + "/" + uuid);
 
-		java.io.File fileOnDisk = new java.io.File(Services.getFilesPath() + "/" + fileNode.getRelativeFilePath());
+		final String filesPath = Services.getInstance().getConfigurationValue(Services.FILES_PATH);
+		
+		java.io.File fileOnDisk = new java.io.File(filesPath + "/" + fileNode.getRelativeFilePath());
 
 		fileOnDisk.getParentFile().mkdirs();
 		FileUtils.writeByteArrayToFile(fileOnDisk, data);
@@ -396,7 +394,7 @@ public class FileHelper {
 
 		if (relativeFilePath != null) {
 
-			String filePath         = Services.getFilePath(Path.Files, relativeFilePath);
+			String filePath = getFilePath(relativeFilePath);
 
 			try {
 			
@@ -431,7 +429,7 @@ public class FileHelper {
 
 		if (path != null) {
 
-			String filePath         = Services.getFilePath(Path.Files, path);
+			String filePath = getFilePath(path);
 
 			try {
 
@@ -503,23 +501,14 @@ public class FileHelper {
 
 		logger.log(Level.FINE, "Search for file with uuid: {0}", uuid);
 
-		List<SearchAttribute> searchAttrs = new LinkedList<>();
-
-		searchAttrs.add(Search.andExactUuid(uuid));
-		searchAttrs.add(Search.orExactTypeAndSubtypes(org.structr.web.entity.AbstractFile.class));
-
-		
 		try {
-			Result<AbstractFile> results = searchNodesAsSuperuser.execute(false, false, searchAttrs);
-			logger.log(Level.FINE, "{0} files found", results.size());
-			if (results.isEmpty()) return null;
-		
-			return (AbstractFile) results.get(0);
+			return StructrApp.getInstance().get(AbstractFile.class, uuid);
 			
-		} catch (FrameworkException ex) {
-			logger.log(Level.SEVERE, null, ex);
+		} catch (Throwable t) {
+			
+			logger.log(Level.WARNING, "Unable to load file by UUID {0}: {1}", new Object[] { uuid, t.getMessage() } );
 		}
-
+		
 		return null;
 	}
 		
@@ -527,23 +516,14 @@ public class FileHelper {
 
 		logger.log(Level.FINE, "Search for file with name: {0}", name);
 
-		List<SearchAttribute> searchAttrs = new LinkedList<>();
-
-		searchAttrs.add(Search.andExactName(name));
-		searchAttrs.add(Search.orExactTypeAndSubtypes(org.structr.web.entity.AbstractFile.class));
-
-		
 		try {
-			Result<AbstractFile> results = searchNodesAsSuperuser.execute(false, false, searchAttrs);
-			logger.log(Level.FINE, "{0} files found", results.size());
-			if (results.isEmpty()) return null;
-		
-			return (AbstractFile) results.get(0);
+			return StructrApp.getInstance().nodeQuery(AbstractFile.class).andName(name).getFirst();
 			
-		} catch (FrameworkException ex) {
-			logger.log(Level.SEVERE, null, ex);
+		} catch (Throwable t) {
+			
+			logger.log(Level.WARNING, "Unable to load file by name {0}: {1}", new Object[] { name, t.getMessage() } );
 		}
-
+		
 		return null;
 	}
 	
@@ -554,11 +534,11 @@ public class FileHelper {
 	 */
 	public static String getFolderPath(final AbstractFile file) {
 		
-		AbstractFile parentFolder = file.getProperty(AbstractFile.parent);
+		LinkedTreeNode parentFolder = file.getProperty(AbstractFile.parent);
 		
 		String folderPath = file.getProperty(AbstractFile.name);
 		
-		if (folderPath == null) folderPath = file.getProperty(AbstractNode.uuid);
+		if (folderPath == null) folderPath = file.getProperty(GraphObject.id);
 		
 		while (parentFolder != null) {
 			folderPath = parentFolder.getName().concat("/").concat(folderPath);
@@ -568,4 +548,21 @@ public class FileHelper {
 		return "/".concat(folderPath);
 	}
 	
+	public static String getFilePath(final String... pathParts) {
+
+		String filePath          = Services.getInstance().getConfigurationValue(Services.FILES_PATH);
+		StringBuilder returnPath = new StringBuilder();
+
+		returnPath.append(filePath);
+		returnPath.append(filePath.endsWith("/")
+			   ? ""
+			   : "/");
+
+		for (String pathPart : pathParts) {
+			returnPath.append(pathPart);
+		}
+
+		return returnPath.toString();
+	}
+
 }
